--- a/content/docs/components/text-divider.mdx
+++ b/content/docs/components/text-divider.mdx
@@ -9,9 +9,11 @@ import { Callout } from 'fumadocs-ui/components/callout';
 import TextDividerDemo from "@/components/previews/text-divider-demo";
 import { BasicExample, ColorExample, StylingExample, IconExample } from "@/components/previews/text-divider-examples";
 
-<div className="w-full flex items-center justify-center min-h-[350px] rounded-xl border bg-card text-card-foreground shadow-sm px-6 py-12">
+<div className="w-full flex items-center justify-center min-h-[350px] rounded-xl border bg-card text-card-foreground shadow-sm">
     <TextDividerDemo />
 </div>
+
+<hr />
 
 ## Installation
 
@@ -114,7 +116,7 @@ export default TextDivider;
 </Tab>
 </Tabs>
 
-## Examples
+<hr />
 
 ### Basic Usage
 
@@ -183,33 +185,7 @@ export function StylingExample() {
 }
 ```
 
-### With Icons (Custom Implementation)
-
-You can easily adapt the pattern to include icons by customizing the content.
-
-<div className="flex items-center justify-center p-6 border rounded-lg mt-4 mb-2">
-    <IconExample />
-</div>
-
-```tsx
-import { Lock, AlertCircle } from "lucide-react";
-import TextDivider from "@/components/ui/text-divider";
-
-export function IconExample() {
-    return (
-        <div className="flex flex-col gap-8 w-full">
-            {/* Custom structure manually creating lines if needed, or using TextDivider for simplicity */}
-             <div className="flex items-center gap-2">
-                <div className="h-px bg-border flex-1" />
-                <span className="text-xs text-muted-foreground flex items-center gap-1">
-                    <Lock className="w-3 h-3" /> Encrypted
-                </span>
-                <div className="h-px bg-border flex-1" />
-            </div>
-        </div>
-    )
-}
-```
+<hr />
 
 ## Props
 
