fix: docs ui changes

--- a/content/docs/components/auth-buttons.mdx
+++ b/content/docs/components/auth-buttons.mdx
@@ -124,7 +124,7 @@ export const GithubAuthButton = ({
     <GoogleExample />
 </div>
 
-```tsx
+```tsx title=" "
 import { GoogleAuthButton } from "@/components/ui/auth-buttons";
 
 export function GoogleExample() {
@@ -144,7 +144,7 @@ export function GoogleExample() {
     <GithubExample />
 </div>
 
-```tsx
+```tsx title=" "
 import { GithubAuthButton } from "@/components/ui/auth-buttons";
 
 export function GithubExample() {
