--- a/content/docs/components/copy-button.mdx
+++ b/content/docs/components/copy-button.mdx
@@ -204,7 +204,7 @@ export const AnimatedCopyButton = (props: CopyButtonProps) => {
     <BasicExample />
 </div>
 
-```tsx
+```tsx title=" "
 import { CopyButton } from "@/components/ui/copy-button/copy-button";
 
 export function BasicExample() {
@@ -227,7 +227,7 @@ export function BasicExample() {
     <AnimatedExample />
 </div>
 
-```tsx
+```tsx title=" "
 import { AnimatedCopyButton } from "@/components/ui/copy-button/animated-copy-button";
 
 export function AnimatedExample() {
