--- a/content/docs/components/speaker.mdx
+++ b/content/docs/components/speaker.mdx
@@ -177,8 +177,11 @@ The `Speaker` component supports various languages by passing the `lang` prop.
 // French
 <Speaker text="Ceci est un exemple de synthèse vocale." lang="fr-FR" />
 
+// German
+<Speaker text="Dies ist ein Beispiel für Text-zu-Sprache." lang="de-DE" />
+
 // Japanese
-<Speaker text="これはテキスト読み上げの例です。" lang="ja-JP" />
+<Speaker text="これはテキスト読み上げの例です。 " lang="ja-JP" />
 ```
 
 <hr />
