fix: routing bug

--- a/content/docs/components/file-select.mdx
+++ b/content/docs/components/file-select.mdx
@@ -5,8 +5,9 @@ description: A drag-and-drop file upload component with customizable styling and
 
 import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Step, Steps } from 'fumadocs-ui/components/steps';
-import { FileSelectDemo, FileSelectMultiple, FileSelectAccept, FileSelectCompact, FileSelectProfile } from "@/components/previews/file-select";
 import { FileUp, File, Upload, FolderUp, ImageUp, User, CloudUpload } from "lucide-react";
+import { FileSelectDemo } from '@/components/previews/file-select/file-select-demo';
+import { FileSelectAccept, FileSelectCompact, FileSelectMultiple, FileSelectProfile } from '@/components/previews/file-select/file-select-examples';
 
 <div className="w-full flex items-center justify-center min-h-[350px] rounded-xl border bg-card text-card-foreground shadow-sm p-10">
     <FileSelectDemo />
