fix: docs layout and typography

--- a/content/docs/components/auth-buttons.mdx
+++ b/content/docs/components/auth-buttons.mdx
@@ -1,6 +1,6 @@
 ---
 title: Auth Buttons
-description: Pre-styled authentication buttons for Google and Github providers, built on top of Shadcn Button.
+description: Everytime building auth components, need to search or find logos ? Why, not directly use FlowUI Auth Buttons, with pre-built styling. So, daily problem solved ?
 ---
 
 import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
