add: landing page ui fix

--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -28,7 +28,7 @@ Open `components.json` and add the `@flowui` entry to the `registries` object:
 ```json title="components.json"
 {
   "registries": {
-    "@flowui": "https://flowui-ten.vercel.app/r/{name}.json"
+    "@flowui": "https://flowui-registry.vercel.app/r/{name}.json"
   }
 }
 ```
