fix: file-select improvements

--- a/content/docs/components/file-select.mdx
+++ b/content/docs/components/file-select.mdx
@@ -3,6 +3,12 @@ title: File Select
 description: A drag-and-drop file upload component with customizable styling and file constraints.
 ---
 
+<Card
+    title="Note"
+    description="Currently, this component just provides a structured UI. Logic is required to be handled by you."
+    className="mb-8"
+/>
+
 import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 import { Step, Steps } from 'fumadocs-ui/components/steps';
 import { FileUp, File, Upload, FolderUp, ImageUp, User, CloudUpload } from "lucide-react";
