chore: updated docs layout

--- a/content/docs/introduction.mdx
+++ b/content/docs/introduction.mdx
@@ -14,7 +14,7 @@ Flow UI isn't just another component library. It's properly opinionated about de
 <Cards>
   <Card
     title="Beautiful by Default"
-    href="/docs/components"
+    href="/docs/core/components"
     description="Every component is crafted with attention to micro-interactions, spacing, and typography."
   />
   <Card
