--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -4,45 +4,84 @@ description: How to install and configure Flow UI in your project.
 ---
 
 import { Step, Steps } from 'fumadocs-ui/components/steps';
+import { Tab, Tabs } from 'fumadocs-ui/components/tabs';
 
-<Steps>
-<Step>
+Flow UI is divided into two parts to give you maximum flexibility in how you build your project:
 
-### Initialize Shadcn UI
+1.  **flowui/core**: Standalone components that are entirely self-contained. They only require Tailwind CSS and Framer Motion.
+2.  **flowui/shadcn**: Components built on top of [shadcn/ui](https://ui.shadcn.com) primitives. These require a shadcn/ui setup.
 
-Flow UI acts as a registry extension to Shadcn UI. First, you need to initialize Shadcn UI in your project if you haven't already:
+Choose the installation method that matches the part of Flow UI you want to use:
 
-```bash
-npx shadcn@latest init
-```
+<Tabs items={['flowui/core (Standalone)', 'flowui/shadcn (Shadcn)']}>
+  <Tab value="flowui/core (Standalone)">
+    ## Installing Core Components
+    These components don't need shadcn/ui. This is ideal for lightweight projects or when you want to avoid adding the shadcn base.
 
-</Step>
-<Step>
+    <Steps>
+    <Step>
+    ### Install Core Dependencies
+    Install the required dependencies for animations and styling utilities:
+    ```bash
+    npm install motion clsx tailwind-merge lucide-react
+    ```
+    </Step>
 
-### Configure Flow UI Registry
+    <Step>
+    ### Add Utility Function
+    Ensure you have a `lib/utils.ts` (or `.js`) file to handle class merging. This is used by all Flow UI components:
+    ```typescript title="lib/utils.ts"
+    import { clsx, type ClassValue } from "clsx"
+    import { twMerge } from "tailwind-merge"
 
-Add the Flow UI registry to your `components.json` file. This allows the CLI to resolve specific `@flowui` components.
+    export function cn(...inputs: ClassValue[]) {
+      return twMerge(clsx(inputs))
+    }
+    ```
+    </Step>
 
-Open `components.json` and add the `@flowui` entry to the `registries` object:
+    <Step>
+    ### Copy and Paste
+    Navigate to any component under the **flowui/core** section, copy the source code, and paste it into your project (usually under `components/flowui/*`).
+    </Step>
+    </Steps>
+  </Tab>
 
-```json title="components.json"
-{
-  "registries": {
-    "@flowui": "https://flowui-registry.vercel.app/r/{name}.json"
-  }
-}
-```
+  <Tab value="flowui/shadcn (Shadcn)">
+    ## Installing Shadcn Components
+    These components leverage shadcn/ui registry features for easy installation and dependency management.
 
-</Step>
-<Step>
+    <Steps>
+    <Step>
+    ### Initialize Shadcn UI
+    If you haven't already, initialize shadcn/ui in your project:
+    ```bash
+    npx shadcn@latest init
+    ```
+    </Step>
 
-### Add Components
+    <Step>
+    ### Configure Flow UI Registry
+    Add our registry to your `components.json`. This allows the shadcn CLI to find and install Flow UI components:
 
-You can now add components directly using the CLI with the `@flowui` scope. For example:
+    ```json title="components.json"
+    {
+      "registries": {
+        "@flowui": "https://flowui-ten.vercel.app/r/{name}.json"
+      }
+    }
+    ```
+    </Step>
 
-```bash
-npx shadcn@latest add @flowui/component-name
-```
+    <Step>
+    ### Add Components
+    Install components directly using the shadcn CLI:
+    ```bash
+    npx shadcn@latest add @flowui/component-name
+    ```
+    </Step>
+    </Steps>
+  </Tab>
+</Tabs>
 
-</Step>
-</Steps>
+
