fix: installation guideline

--- a/content/docs/core/animated-components/changing-text.mdx
+++ b/content/docs/core/animated-components/changing-text.mdx
@@ -18,10 +18,10 @@ import { DefaultExample, BlurExample } from "@/components/previews/changing-text
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the `changing-text` component to your project:
+Run the following command to add the `changing-text` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/changing-text
+npx theflowui add changing-text
 ```
 
 </Tab>
