--- a/content/docs/core/animated-components/scrollbar.mdx
+++ b/content/docs/core/animated-components/scrollbar.mdx
@@ -18,10 +18,10 @@ import { DefaultExample, SpringExample } from "@/components/previews/scrollbar/s
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the `scrollbar` component to your project:
+Run the following command to add the `scrollbar` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/scrollbar
+npx theflowui add scrollbar
 ```
 
 </Tab>
