--- a/content/docs/core/blocks/file-select.mdx
+++ b/content/docs/core/blocks/file-select.mdx
@@ -24,10 +24,10 @@ import { FileSelectAccept, FileSelectCompact, FileSelectMultiple, FileSelectProf
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the function to your project:
+Run the following command to add the `file-select` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/file-select
+npx theflowui add file-select
 ```
 
 </Tab>
