--- a/content/docs/core/blocks/navbar.mdx
+++ b/content/docs/core/blocks/navbar.mdx
@@ -23,10 +23,10 @@ import { SaaSNavbar, EditorialNavbar, StoreNavbar } from '@/components/previews/
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the navbar to your project:
+Run the following command to add the `navbar` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/navbar
+npx theflowui add navbar
 ```
 
 </Tab>
