--- a/content/docs/core/components/lift-button.mdx
+++ b/content/docs/core/components/lift-button.mdx
@@ -16,10 +16,10 @@ import { AlwaysVisibleExample, ScrollToSectionExample, ThresholdExample, CustomC
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the `lift-button` component to your project using the Flow UI registry:
+Run the following command to add the `lift-button` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/lift-button
+npx theflowui add lift-button
 ```
 
 </Tab>
