--- a/content/docs/core/components/speaker.mdx
+++ b/content/docs/core/components/speaker.mdx
@@ -18,10 +18,10 @@ import { DefaultExample, SpanishExample, FrenchExample, GermanExample, JapaneseE
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the `speaker` component to your project:
+Run the following command to add the `speaker` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/speaker
+npx theflowui add speaker
 ```
 
 </Tab>
