--- a/content/docs/core/components/text-divider.mdx
+++ b/content/docs/core/components/text-divider.mdx
@@ -20,10 +20,10 @@ import { BasicExample, ColorExample, StylingExample, IconExample } from "@/compo
 <Tabs items={['CLI', 'Manual']}>
 <Tab value="CLI">
 
-Run the following command to add the `text-divider` component to your project using the Flow UI registry:
+Run the following command to add the `text-divider` component to your project using the Flow UI CLI:
 
 ```bash
-npx shadcn@latest add @flowui/text-divider
+npx theflowui add text-divider
 ```
 
 </Tab>
