update: motion notice

--- a/content/docs/core/animated-components/changing-text.mdx
+++ b/content/docs/core/animated-components/changing-text.mdx
@@ -9,6 +9,12 @@ import { Callout } from 'fumadocs-ui/components/callout';
 import ChangingTextDemo from "@/components/previews/changing-text/changing-text-demo";
 import { DefaultExample, BlurExample } from "@/components/previews/changing-text/changing-text-examples";
 
+<Card
+    title="Note"
+    description="This component requires motion. It will be installed as you run the cli command"
+    className="mb-8"
+/>
+
 <div className="w-full flex items-center justify-center min-h-[350px] rounded-xl border bg-card text-card-foreground shadow-sm">
     <ChangingTextDemo />
 </div>
