--- a/content/docs/core/animated-components/scrollbar.mdx
+++ b/content/docs/core/animated-components/scrollbar.mdx
@@ -9,6 +9,12 @@ import { Callout } from 'fumadocs-ui/components/callout';
 import ScrollbarDemo from "@/components/previews/scrollbar/scrollbar-demo";
 import { DefaultExample, SpringExample } from "@/components/previews/scrollbar/scrollbar-examples";
 
+<Card
+    title="Note"
+    description="This component requires motion. It will be installed as you run the cli command"
+    className="mb-8"
+/>
+
 <div className="w-full flex items-center justify-center min-h-fit relative rounded-xl border bg-card text-card-foreground shadow-sm overflow-hidden">
     <ScrollbarDemo />
 </div>
