update: install command

--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -23,7 +23,7 @@ Choose the installation method that matches the part of Flow UI you want to use:
     ### Install Core Dependencies
     Install the required dependencies for animations and styling utilities:
     ```bash
-    npm install motion clsx tailwind-merge lucide-react
+    npm install clsx tailwind-merge lucide-react
     ```
     </Step>
 
