fix: github stars count

--- a/content/docs/core/blocks/navbar.mdx
+++ b/content/docs/core/blocks/navbar.mdx
@@ -5,7 +5,7 @@ description: A flexible, polymorphic navigation bar component for building consi
 
 <Card
     title="Responsive Note"
-    description="The current version of this block provides the structural layout. Mobile responsiveness (hamburger menu, mobile drawer) should be implemented according to your specific needs."
+    description="The current version of this block provides the structural layout. Mobile Responsiveness is under development. Also, please wait for some clean examples to come !"
     className="mb-8"
 />
 
